# mcp-archicad-with-tapir

./: .gitignore  CLAUDE.md  README.md  install_mac.sh  install_win.bat
.github/workflows/: archicad_addon.yml  archicad_addon_build_check.yml
archicad-addon/Sources/: AddOnMain.cpp  ElementCreationCommands.cpp  ElementCreationCommands.hpp
mcp-server/: README.md  pyproject.toml  server.py
